Minor changes
- Module: requires transitive added
- Manifest --add-opens added